<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/createOrderHeader"
            app:layout_constraintBottom_toBottomOf="@+id/createOrderHeader"
            android:layout_marginTop="5dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/createOrderHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/createOrderHeader"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/createOrderOrganization"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/organization"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createOrderHeader"/>

        <EditText
            android:id="@+id/createOrderFio"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/fio"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createOrderOrganization"/>

        <EditText
            android:id="@+id/createOrderPosition"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/position"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createOrderFio"/>

        <EditText
            android:id="@+id/createOrderPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createOrderPosition"/>


        <EditText
            android:id="@+id/createOrderEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createOrderPhone"/>


        <TextView
            android:id="@+id/createOrderTextTotalPriceWithSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/totalPayment"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/createOrderEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/createOrderEmail"
            app:layout_constraintTop_toBottomOf="@+id/createOrderEmail"/>


        <TextView
            android:id="@+id/createOrderTotalPriceWithSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@+id/createOrderTextTotalPriceWithSale"
            app:layout_constraintTop_toBottomOf="@+id/createOrderTextTotalPriceWithSale"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="800р"/>




        <Button
            android:id="@+id/createOrderPlace"
            android:layout_width="289dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#6689EE"
            android:text="@string/placeOrder"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/createOrderTotalPriceWithSale"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>